# grzegorz

./: Changelog.md  LICENSE  README.md  pyproject.toml  setup.cfg
doc/: USER-MANUAL.md  anki-integration.md  formats.md  fullmake.md  generator.md  interesting-differences.md  ipa-fetch.md  minimal-pairs.md  phonological-analysis.md  wordlist.md
grzegorz/: __main__.py  anki_integration.py  fetcher.py  generator.py  io.py  subcommands.py  test.py  word.py  wordlist.py
