[metadata]
name = grzegorz
version = 0.3.4
author = xylous
author_email = xylous.e@gmail.com
description = A minimal pair generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xylous/grzegorz
project_urls =
    Bug Tracker = https://github.com/xylous/grzegorz/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = grzegorz
packages = find:
python_requires = >=3.6
install_requires =
    wiktionaryparser
    tqdm
    requests
    genanki

[options.packages.find]
where = grzegorz
