[metadata]
name = grzegorz
version = 0.4.6
author = xylous
author_email = xylous.e@gmail.com
description = A minimal pair generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xylous/grzegorz
project_urls =
    Bug Tracker = https://github.com/xylous/grzegorz/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Environment :: Console
    Intended Audience :: Education
    Topic :: Education
    Topic :: Text Processing :: Linguistic

[options]
packages =
    grzegorz
python_requires = >=3.10
install_requires =
    wiktionaryparser
    tqdm
    requests
    genanki

[options.entry_points]
console_scripts =
    grzegorz = grzegorz.__main__:main
